added composer support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   nginx:
     build: ./nginx/
@@ -6,27 +5,20 @@ services:
       - 8080:8080
 
     volumes:
-      - ./php/:/var/www/html/
+      - ./src/:/var/www/html/
 
   php:
-    build: ./php/
+    build: .
     expose:
       - 9000
-    volumes:
-      - ./php/:/var/www/html/
     develop:
       watch:
         - action: sync
-          path: ./php/
+          path: ./src/
           target: /var/www/html/
-
-  db:
-    image: mariadb
-    volumes:
-      - mysql-data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: mariadb
-      MYSQL_DATABASE: ecomdb
-
-volumes:
-  mysql-data:
+        - action: rebuild
+          path: composer.json
+          target: /var/www/html/
+        - action: rebuild
+          path: composer.lock
+          target: /var/www/html/
